--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<svg viewBox="0 0 300 300"><circle cx="150" cy="150" r="146" stroke-width="2"></circle><path d="M60 220L130 60 h70 L130 220 z"></path><path d="M120 220 h110 l25 -50 h-110z"></path></svg>
 </span>
 <span class="name">LOGPAI</span></a>
+<div id=hamburger>
+<svg class="icon"><use xlink:href="https://istio.io/img/icons.svg#hamburger"/></svg></div>
 <div id="header-links">
 <a href="#publication">Publications</a>
 <a href="#team">Team</a>
@@ -33,12 +35,12 @@
 	<div id="hero-text"><h1 id="hero-label">LOGPAI</h1><h1 id="hero-lead">- Log Analytics Powered by AI -</h1></div>
 </div> -->
 
+<div class="container">
 <div class="row">
-    <!-- <div class="col-lg-11 col-lg-offset-1"> -->
-        <div class="col-lg-6 col-lg-offset-3">
-            <img src="img/logpai_logo.jpg" alt="">
-        </div>
-</div>
+    <div class="col-md-6 col-md-offset-3">
+        <img src="img/logpai_logo.jpg" alt="">
+    </div>
+</div></div>
 
 <div id="panels">
 <div id="panel1" class="panel" style="opacity: 1;"><a href="https://github.com/logpai/loghub"><div class="panel-img-top"><svg class="landing-image" viewBox="0 0 1200 900"><defs><style>.cls-1,.cls-2,.cls-3,.cls-4{fill:none;stroke-miterlimit:10}.cls-1{stroke:#000}.cls-1,.cls-3,.cls-4{stroke-width:10px}.cls-2{stroke-width:30px}.cls-3{stroke:#64c489}.cls-4{stroke:#476baf}.cls-5{fill:#476baf}.cls-6{fill:#64c489}</style></defs><circle cx="149.5" cy="149.5" r="50"></circle><circle cx="149.5" cy="750.5" r="50"></circle><path d="M240 120l-30 30 30 30V120z"></path><path d="M240 720l-30 30 30 30V720z"></path><path class="cls-1" d="M250 150c2e2.0 5e2 3e2 7e2 3e2"></path><path class="cls-1" d="M250 750c2e2.0 499-3e2 7e2-3e2"></path><path class="cls-1" d="M250 750H950z"></path><path class="cls-1" d="M250 150H950z"></path><path class="cls-2" d="M950 150c-2e2.0-5e2 3e2-7e2 3e2"></path><path class="cls-2" d="M950 750c-2e2.0-499-3e2-7e2-3e2"></path><path class="cls-2" d="M250 450H950z"></path><path class="cls-3" d="M340 450H950z"></path><path class="cls-4" d="M950 150c-2e2.0-5e2 3e2-7e2 3e2"></path><path class="cls-4" d="M950 750c-2e2.0-499-3e2-7e2-3e2"></path><circle class="cls-5" cx="149.5" cy="449.5" r="50"></circle><circle class="cls-5" cx="1050.5" cy="149.5" r="50"></circle><circle class="cls-5" cx="1050.5" cy="750.5" r="50"></circle><circle class="cls-6" cx="1050.5" cy="449.5" r="50"></circle><path class="cls-5" d="M240 420l-30 30 30 30V420z"></path><path class="cls-6" d="M960 480l30-30-30-30v60z"></path><path class="cls-5" d="M960 180l30-30-30-30v60z"></path><path class="cls-5" d="M960 780l30-30-30-30v60z"></path></svg></div>
@@ -144,7 +146,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="img/team/jyliu.jpg" class="img-responsive img-circle" alt="">
+                            <img src="img/team/slhe.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://github.com/JinYang88">Jinyang Liu</a>
                             <p class="text-muted">Msc, Sun Yat-sen University</p>
                         </div>
