--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="clearfix"></div>
                     <ul>
                     	<li>
-                            <p>[<strong>ICSE'19</strong>] Jieming Zhu, Shilin He, Jinyang Liu, Pinjia He, Qi Xie, Zibin Zheng, Michael R. Lyu.. <a target="_blank" href="https://arxiv.org/pdf/1811.03509.pdf">Tools and Benchmarks for Automated Log Parsing</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2019.</p>
+                            <p>[<strong>ICSE'19</strong>] Jieming Zhu, Shilin He, Jinyang Liu, Pinjia He, Qi Xie, Zibin Zheng, Michael R. Lyu. <a target="_blank" href="https://arxiv.org/pdf/1811.03509.pdf">Tools and Benchmarks for Automated Log Parsing</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2019.</p>
                         </li>
                         <li>
                             <p>[<strong>FSE'18</strong>] Shilin He, Qingwei Lin, Jian-Guang Lou, Hongyu Zhang, Michael R.Lyu, Dongmei Zhang. <a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236083">Identifying Impactful Service System Problems via Log Analysis</a>, <em> in Proc. of the 26th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE)</em>, 2018.</p>
@@ -79,7 +79,7 @@
                             <p>[<strong>ASE'18</strong>] Pinjia He, Zhuangbin Chen, Shilin He, Michael R. Lyu. <a target="_blank" href="https://pinjiahe.github.io/papers/ASE18.pdf">Characterizing the Natural Language Descriptions in Software Logging Statements</a>, <em> in Proc. of the 33rd ACM/IEEE International Conference on Automated Software Engineering (ASE)</em>, 2018.</p>
                         </li>
                         <li>
-                            <p>[<strong>TDSC'18</strong>] Pinjia He, Jieming Zhu, Shilin He, Jian Li, Michael R. Lyu, "<a target="_blank" href="https://ieeexplore.ieee.org/document/8067504/">Towards Automated Log Parsing for Large-Scale Log Data Analysis</a>," <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, 2018.</p>
+                            <p>[<strong>TDSC'18</strong>] Pinjia He, Jieming Zhu, Shilin He, Jian Li, Michael R. Lyu, <a target="_blank" href="https://ieeexplore.ieee.org/document/8067504/">Towards Automated Log Parsing for Large-Scale Log Data Analysis</a>, <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, 2018.</p>
                         </li>
                         <li>
                             <p>[<strong>ICWS'17</strong>] Pinjia He, Jieming Zhu, Zibin Zheng, and Michael R. Lyu. <a target="_blank" href="http://jmzhu.logpai.com/pub/pjhe_icws2017.pdf">Drain: An Online Log Parsing Approach with Fixed Depth Tree</a>, <em>in Proc. of the 24th International Conference on Web Services (ICWS)</em>, 2017.</p>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="img/team/slhe.jpg" class="img-responsive img-circle" alt="">
+                            <img src="img/team/jyliu.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://github.com/JinYang88">Jinyang Liu</a>
                             <p class="text-muted">Msc, Sun Yat-sen University</p>
                         </div>
