--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <svg class="icon"><use xlink:href="https://istio.io/img/icons.svg#hamburger"/></svg></div>
 <div id="header-links">
 <a href="#publication">Publications</a>
+<a href="#impact">Impact</a>
 <a href="#team">Team</a>
+<a href="#sponsors">Sponsors</a>
 </div></nav></header>
 
 
@@ -94,8 +96,34 @@
                             <p>[<strong>ICSE'15</strong>] Jieming Zhu, Pinjia He, Qiang Fu, Hongyu Zhang, Michael R. Lyu, Dongmei Zhang. <a target="_blank" href="http://jiemingzhu.github.io/pub/jmzhu_icse2015.pdf">Learning to Log: Helping Developers Make Informed Logging Decisions</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2015.</p>
                         </li>                
                          <li>
-                            <p>[<strong>ICSE'14</strong>] Qiang Fu, Jieming Zhu, Wenlu Hu, Jian-Guang Lou, Rui Ding, Qingwei Lin, Dongmei Zhang, and Tao Xie. <a target="_blank" href="https://jiemingzhu.github.io/pub/qfu_icse2014.pdf">Where Do Developers Log? An Empirical Study on Logging Practices in Industry</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2014.</p>
+                            [<strong>ICSE'14</strong>] Qiang Fu, Jieming Zhu, Wenlu Hu, Jian-Guang Lou, Rui Ding, Qingwei Lin, Dongmei Zhang, and Tao Xie. <a target="_blank" href="https://jiemingzhu.github.io/pub/qfu_icse2014.pdf">Where Do Developers Log? An Empirical Study on Logging Practices in Industry</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2014.
                         </li>                             
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+</section>
+
+<section id="impact" class="bg-light-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h1 class="section-heading">IMPACT
+                    <hr class="section-heading-spacer"></h1>
+                    <div class="clearfix"></div>
+                    <p> The ultimate goal of LogPAI is to build an open-source AI platform for automated log analysis. Towards this goal, we benchmark a set of research work as well as release open datasets and tools for log analysis research. With both datasets and source code available, our LogPAI project would benefit both researchers and practitioners in the community.
+
+                    <ul>
+                        <li>
+                            <p>The loghub datasets have been downloaded 2300+ times by more than <a target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub">230 organizations</a> from both industry and academia.</p>
+                        </li>
+
+                        <li>
+                            <p>Our log analysis tools have been used by industrial teams in <a target="_blank" href="https://www.microsoft.com/en-us/research/group/software-analytics/">Microsoft</a> and <a target="_blank" href="https://www.huawei.com">Huawei</a>.</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -156,6 +184,40 @@
         </div>
 </section>
 
+<section id="sponsors" class="bg-light-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h1 class="section-heading">SPONSORS
+                    <hr class="section-heading-spacer"></h1>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- <div class="col-lg-11 col-lg-offset-1"> -->
+                    <div class="col-sm-2 col-sm-offset-2">
+                        <div class="team-member">
+                            <a href="https://www.ugc.edu.hk/eng/rgc/"><img src="img/sponsors/rgc.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="team-member">
+                            <a href="http://www.nsfc.gov.cn/english/site_1/index.html"><img src="img/sponsors/nsfc.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="team-member">
+                            <a href="https://www.huawei.com"><img src="img/sponsors/huawei.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="team-member">
+                            <a href="https://www.microsoft.com/en-us/research/"><img src="img/sponsors/microsoft.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+        </div>
+</section>
 
 <footer>
 <div class="info"><p class="copyright">Log Analytics Powered by AI<br>© 2019 LOGPAI TEAM<br>Contact us: info@logpai.com
