--- a/index.html
+++ b/index.html
@@ -195,25 +195,17 @@
             </div>
             <div class="row">
                 <!-- <div class="col-lg-11 col-lg-offset-1"> -->
-                    <div class="col-sm-2 col-sm-offset-2">
-                        <div class="team-member">
-                            <a href="https://www.ugc.edu.hk/eng/rgc/"><img src="img/sponsors/rgc.png" alt=""></a>
-                        </div>
+                    <div class="col-sm-2 col-sm-offset-2 vcenter">
+                        <a href="https://www.ugc.edu.hk/eng/rgc/"><img src="img/sponsors/rgc.png" alt=""></a>
                     </div>
-                    <div class="col-sm-2">
-                        <div class="team-member">
-                            <a href="http://www.nsfc.gov.cn/english/site_1/index.html"><img src="img/sponsors/nsfc.png" alt=""></a>
-                        </div>
+                    <div class="col-sm-2 vcenter">
+                        <a href="http://www.nsfc.gov.cn/english/site_1/index.html"><img src="img/sponsors/nsfc.png" alt=""></a>
                     </div>
-                    <div class="col-sm-2">
-                        <div class="team-member">
-                            <a href="https://www.huawei.com"><img src="img/sponsors/huawei.png" alt=""></a>
-                        </div>
+                    <div class="col-sm-2 vcenter">
+                        <a href="https://www.huawei.com"><img src="img/sponsors/huawei.png" alt=""></a>
                     </div>
-                    <div class="col-sm-2">
-                        <div class="team-member">
-                            <a href="https://www.microsoft.com/en-us/research/"><img src="img/sponsors/microsoft.png" alt=""></a>
-                        </div>
+                    <div class="col-sm-2 vcenter">
+                        <a href="https://www.microsoft.com/en-us/research/"><img src="img/sponsors/microsoft.png" alt=""></a>
                     </div>
             </div>
         </div>
