--- a/index.html
+++ b/index.html
@@ -115,13 +115,16 @@
                     <hr class="section-heading-spacer"></h1>
                     <div class="clearfix"></div>
 
-                    <p> The ultimate goal of LogPAI is to build an open-source AI platform for automated log analysis. Towards this goal, we benchmark a set of research work as well as release open datasets and tools for log analysis research. With both datasets and source code available, our LogPAI project would benefit both researchers and practitioners in the community.
+                    <p> The ultimate goal of LogPAI is to build an open-source AI platform for automated log analysis. Towards this goal, we benchmark a set of research work as well as release open datasets and tools for log analysis research. With both datasets and source code available, our LogPAI project would benefit both researchers and practitioners in the community.</p>
 
 
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>+</strong> The loghub datasets have been downloaded 2300+ times by more than <a target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub">230 organizations</a> from both industry and academia.<br>
+                    <ul> 
+                        <li>The loghub datasets have been downloaded 2300+ times by more than <a target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub">230 organizations</a> from both industry and academia.
+                        </li>
   
-                    &nbsp;&nbsp;&nbsp;&nbsp;<strong>+</strong> Our log analysis tools have been used by industrial teams in <a target="_blank" href="https://www.microsoft.com/en-us/research/group/software-analytics/">Microsoft</a> and <a target="_blank" href="https://www.huawei.com">Huawei</a>.</p>
-
+                        <li>Our log analysis tools have been used by industrial teams in <a target="_blank" href="https://www.microsoft.com/en-us/research/group/software-analytics/">Microsoft</a> and <a target="_blank" href="https://www.huawei.com">Huawei</a>.
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -193,24 +196,16 @@
             <div class="row">
                 <!-- <div class="col-lg-11 col-lg-offset-1"> -->
                     <div class="col-sm-2 col-sm-offset-2 vcenter">
-                        <div class="team-member">
                             <a href="https://www.ugc.edu.hk/eng/rgc/"><img src="img/sponsors/rgc.png" alt=""></a>
-                        </div>
                     </div>
                     <div class="col-sm-2 vcenter">
-                        <div class="team-member">
                             <a href="http://www.nsfc.gov.cn/english/site_1/index.html"><img src="img/sponsors/nsfc.png" alt=""></a>
-                        </div>
                     </div>
                     <div class="col-sm-2 vcenter">
-                        <div class="team-member">
                             <a href="https://www.huawei.com"><img src="img/sponsors/huawei.png" alt=""></a>
-                        </div>
                     </div>
                     <div class="col-sm-2 vcenter">
-                        <div class="team-member">
                             <a href="https://www.microsoft.com/en-us/research/"><img src="img/sponsors/microsoft.png" alt=""></a>
-                        </div>
                     </div>
             </div>
         </div>
