--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <hr class="section-heading-spacer"></h1>
                     <div class="clearfix"></div>
 
-                    <p> The ultimate goal of LogPAI is to build an open-source AI platform for automated log analysis. Towards this goal, we benchmark a set of research work as well as release open datasets and tools for log analysis research. With both datasets and source code available, our LogPAI project would benefit both researchers and practitioners in the community.</p>
+                    <p> The ultimate goal of LogPAI is to build an open-source AI platform for automated log analysis. Towards this goal, we benchmark a set of research work as well as release open datasets and tools for log analysis research. With both datasets and source code available, we hope that our LogPAI project could benefit both researchers and practitioners in the community.</p>
 
 
                     <ul> 
