--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     <div class="clearfix"></div>
                     <ul>
                     	<li>
+                            <p>[<strong>ASE'19</strong>] Jinyang Liu, Jieming Zhu, Shilin He, Pinjia He, Zibin Zheng, Michael R. Lyu. <a target="_blank" href="https://jiemingzhu.github.io/pub/jyliu_ase2019.pdf">Logzip: Extracting Hidden Structures via Iterative Clustering for Log Compression</a>, <em>in Proc. of IEEE/ACM International Conference on Automated Software Engineering (ASE)</em>, 2019.</p>
+                        </li>
+			<li>
                             <p>[<strong>ICSE'19</strong>] Jieming Zhu, Shilin He, Jinyang Liu, Pinjia He, Qi Xie, Zibin Zheng, Michael R. Lyu. <a target="_blank" href="https://arxiv.org/pdf/1811.03509.pdf">Tools and Benchmarks for Automated Log Parsing</a>, <em>in Proc. of International Conference on Software Engineering (ICSE)</em>, 2019.</p>
                         </li>
                         <li>
