--- a/index.html
+++ b/index.html
@@ -540,14 +540,14 @@
                         <div class="team-member">
                             <img src="img/team/yxsu.png" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://sse.sysu.edu.cn/teacher/221">Yuxin Su</a>
-                            <p class="text-muted">Assistant Professor, Sun Yat-Sen University</p>
+                            <p class="text-muted">Assistant Professor, Sun Yat-Sen University <br> Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
                             <img src="img/team/zbzheng.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="http://www.zibinzheng.com/">Zibin Zheng</a>
-                            <p class="text-muted">Professor,<br> Sun Yat-Sen University</p>
+                            <p class="text-muted">Professor,<br> Sun Yat-Sen University<br> Ph.D., CUHK</p>
                         </div>
                     </div>
                 </div>
