--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <hr class="panel-line">
                         <h5 class="panel-title">Loghub</h5>
                         <hr class="panel-line">
-                        <p class="panel-text">A large collection of system log datasets for AI-powered log analytics.
+                        <p class="panel-text">A large collection of system log datasets for AI-driven log analytics [ISSRE'23].
                         </p>
                     </div>
                 </a></div>
@@ -204,7 +204,7 @@
                         <hr class="panel-line">
                         <h5 class="panel-title">Logparser</h5>
                         <hr class="panel-line">
-                        <p class="panel-text">A toolkit for automated log parsing [ICSE'19, TDSC'18, DSN'16].</p>
+                        <p class="panel-text">A machine learning toolkit for log parsing [ICSE'19].</p>
                     </div>
                 </a></div>
 
@@ -251,7 +251,7 @@
                         <hr class="panel-line">
                         <h5 class="panel-title">Loglizer</h5>
                         <hr class="panel-line">
-                        <p class="panel-text">A log analysis toolkit for automated anomaly detection [ISSRE'16].</p>
+                        <p class="panel-text">A machine learning toolkit for log-based anomaly detection [ISSRE'16].</p>
                     </div>
                 </a></div>
 
@@ -323,10 +323,10 @@
                         </svg></div>
                     <div class="panel-body">
                         <hr class="panel-line">
-                        <h5 class="panel-title">Log3C</h5>
+                        <h5 class="panel-title">Logzip</h5>
                         <hr class="panel-line">
-                        <p class="panel-text">Log-based impactful problem identification using machine learning
-                            [FSE'18].</p>
+                        <p class="panel-text">An optimized log compression tool via iterative clustering
+                            [ASE'19].</p>
                     </div>
                 </a></div>
 
@@ -334,8 +334,8 @@
 
         <div id="buttons" style="opacity: 1">
             <a title="Loghub datasets are available for downloading." class=btn
-                href=https://doi.org/10.5281/zenodo.1144100>DOWNLOAD DATASETS</a>
-            <a title="Learn more about LogPAI projects." class=btn href=https://github.com/logpai>FOLLOW GITHUB REPO</a>
+                href=https://github.com/logpai/loghub?tab=readme-ov-file#logs-currently-available>DOWNLOAD DATASETS</a>
+            <a title="Learn more about LogPAI projects." class=btn href=https://github.com/logpai>FOLLOW ON GITHUB</a>
         </div>
     </main>
 
@@ -349,10 +349,25 @@
                     <div class="clearfix"></div>
                     <ul>
                         <li>
+                            <p>[<strong>ISSTA'24</strong>] Zhihan Jiang, Jinyang Liu, Junjie Huang, Yichen Li, Yintong Huo, 
+                                Jiazhen Gu, Zhuangbin Chen, Jieming Zhu, Michael R. Lyu. 
+                                <a target="_blank" href="https://arxiv.org/abs/2308.10828">A Large-scale Evaluation 
+                                    for Log Parsing Techniques: How Far are We?</a>, <em>in Proc. of the ACM SIGSOFT 
+                                        International Symposium on Software Testing and Analysis (ISSTA)</em>,
+                                    2024.</p>
+                        </li>
+                        <li>
+                            <p>[<strong>ISSRE'23</strong>] Jieming Zhu, Shilin He, Pinjia He, Jinyang Liu, and Michael R. Lyu. 
+                                <a target="_blank" href="https://arxiv.org/abs/2008.06448">Loghub: A Large Collection of 
+                                    System Log Datasets for AI-driven Log Analytics</a>, <em>in Proc. of IEEE International 
+                                        Symposium on Software Reliability Engineering (ISSRE)</em>,
+                                    2023.</p>
+                        </li>
+                        <li>
                             <p>[<strong>ArXiv'21</strong>] Zhuangbin Chen, Jinyang Liu, Wenwei Gu, Yuxin Su, and Michael
                                 R. Lyu. <a target="_blank" href="https://arxiv.org/abs/2107.05908">Experience Report:
-                                    Deep Learning-based System Log Analysis for Anomaly Detection</a>, arXiv preprint,
-                                arXiv:2107.05908 (2021).
+                                    Deep Learning-based System Log Analysis for Anomaly Detection</a>, <em>arXiv preprint,
+                                arXiv:2107.05908</em>, 2021.</p>
                         </li>
                         <li>
                             <p>[<strong>ASE'19</strong>] Jinyang Liu, Jieming Zhu, Shilin He, Pinjia He, Zibin Zheng,
@@ -449,19 +464,17 @@
 
 
                     <ul>
-                        <li>The loghub datasets have been downloaded <strong>70,000+</strong> times by more than <a
-                                target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub">380
-                                organizations</a>
-                            from both
-                            industry and academia. The related publications have been cited more than
-                            <strong>1,500</strong> times
-                            according to Google Scholar.
+                        <li>The loghub datasets have attained a total of <strong>60,000+</strong> unique downloads by more than <a
+                                target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub-download-list">450
+                                organizations</a> from both industry and academia. The related publications have been cited more than
+                            <strong>1,500</strong> times according to Google Scholar.
                         </li>
 
-                        <li>Our log analysis tools have been used by industrial teams in <a target="_blank"
+                        <li>Our log analysis datasets and tools have been used by industrial teams in <a target="_blank"
                                 href="https://www.microsoft.com/en-us/research/group/software-analytics/">Microsoft</a>,
-                            <a target="_blank" href="https://www.huawei.com">Huawei</a>, and <a target="_blank"
-                                href="https://www.huawei.com">IBM</a>.
+                            <a target="_blank" href="https://www.huawei.com">Huawei</a>, <a target="_blank"
+                                href="https://developer.ibm.com/blogs/how-mining-log-templates-can-help-ai-ops-in-cloud-scale-data-centers/">IBM</a>, 
+                                <a target="_blank" href="https://mp.weixin.qq.com/s/9cVZUImMIyRUBNJYQg4S1A">Ant Group</a>.
                         </li>
                     </ul>
                 </div>
@@ -519,14 +532,14 @@
                         <div class="team-member">
                             <img src="img/team/zbchen.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://github.com/zbchern">Zhuangbin Chen</a>
-                            <p class="text-muted">Ph.D. Candidate, CUHK</p>
+                            <p class="text-muted">Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
                             <img src="img/team/ythuo.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://yintonghuo.github.io/yintonghuo/">Yintong Huo</a>
-                            <p class="text-muted">Ph.D. Candidate, CUHK</p>
+                            <p class="text-muted">Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
@@ -585,8 +598,8 @@
 
     <footer>
         <div class="info">
-            <p class="copyright">Log Analytics Powered by AI<br>© 2019 LOGPAI TEAM<br>Contact us: info@logpai.com
-                <br>Theme copied from <a href="https://istio.io/">Istio.io</a>
+            <p class="copyright">Log Analytics Powered by AI<br>© 2024 LOGPAI TEAM<br>Contact us: <a href="mailto:info@logpai.com">info@logpai.com</a>
+                <!-- <br>Theme copied from <a href="https://istio.io/">Istio.io</a> -->
             </p>
         </div>
     </footer>
