--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@
                         tools for log analysis research. With both datasets and source code available, we hope that our
                         LogPAI project could benefit both researchers and practitioners in the community.</p>
 
-
                     <ul>
-                        <li>The loghub datasets have attained a total of <strong>60,000+</strong> unique downloads by more than <a
+                        <li>The loghub datasets have received a total of <a href="https://doi.org/10.5281/zenodo.1144100"><img src="https://img.shields.io/endpoint?&url=https://cdn.jsdelivr.net/gh/logpai/loghub@zenodo/downloads.json&labelColor=1AE&color=DDEEFF&style=flat&label=Downloads" style="width:115px;height:auto;"></a>
+                            by more than <a
                                 target="_blank" href="https://github.com/logpai/loghub/wiki/Loghub-download-list">450
                                 organizations</a> from both industry and academia. The related publications have been cited more than
                             <strong>1,500</strong> times according to Google Scholar.
@@ -538,15 +538,15 @@
                     <div class="col-sm-2">
                         <div class="team-member">
                             <img src="img/team/ythuo.jpg" class="img-responsive img-circle" alt="">
-                            <a target="_blank" href="https://yintonghuo.github.io/yintonghuo/">Yintong Huo</a>
+                            <a target="_blank" href="https://yintonghuo.github.io">Yintong Huo</a>
                             <p class="text-muted">Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
                             <img src="img/team/zbzheng.jpg" class="img-responsive img-circle" alt="">
-                            <a target="_blank" href="http://www.zibinzheng.com/">Zibin Zheng</a>
-                            <p class="text-muted">Professor,<br> Sun Yat-Sen University<br> Ph.D., CUHK</p>
+                            <a target="_blank" href="https://scholar.google.com/citations?user=zWnsNrkAAAAJ&hl=en">Zibin Zheng</a>
+                            <p class="text-muted">Professor, IEEE Fellow<br> Sun Yat-Sen University<br> Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
