--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                 </a></div>
 
-            <div id="panel4" class="panel" style="opacity: 1;"><a href="https://github.com/logpai/Log3C">
+            <div id="panel4" class="panel" style="opacity: 1;"><a href="https://github.com/logpai/logzip">
                     <div class="panel-img-top"><svg class="landing-image" viewBox="0 0 1200 900">
                             <defs>
                                 <style>
@@ -489,7 +489,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h1 class="section-heading">TEAM
+                    <h1 class="section-heading">CORE TEAM
                         <hr class="section-heading-spacer">
                     </h1>
                     <div class="clearfix"></div>
@@ -522,7 +522,7 @@
                         <div class="team-member">
                             <img src="img/team/jyliu.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://jinyang88.github.io/">Jinyang Liu</a>
-                            <p class="text-muted">Ph.D. Candidate, CUHK</p>
+                            <p class="text-muted">Researcher, TikTok <br> Ph.D., CUHK</p>
                         </div>
                     </div>
                     <!-- </div> -->
@@ -531,15 +531,15 @@
                     <div class="col-sm-2 col-sm-offset-2">
                         <div class="team-member">
                             <img src="img/team/zbchen.jpg" class="img-responsive img-circle" alt="">
-                            <a target="_blank" href="https://github.com/zbchern">Zhuangbin Chen</a>
-                            <p class="text-muted">Ph.D., CUHK</p>
+                            <a target="_blank" href="https://zbchern.github.io">Zhuangbin Chen</a>
+                            <p class="text-muted">Assistant Professor, Sun Yat-Sen University <br>Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
                             <img src="img/team/ythuo.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://yintonghuo.github.io">Yintong Huo</a>
-                            <p class="text-muted">Ph.D., CUHK</p>
+                            <p class="text-muted">Assistant Professor, Singapore Management University <br>Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
