--- a/index.html
+++ b/index.html
@@ -351,9 +351,14 @@
                         <li>
                             <p>[<strong>ISSTA'24</strong>] Zhihan Jiang, Jinyang Liu, Junjie Huang, Yichen Li, Yintong Huo, 
                                 Jiazhen Gu, Zhuangbin Chen, Jieming Zhu, Michael R. Lyu. 
-                                <a target="_blank" href="https://arxiv.org/abs/2308.10828">A Large-scale Evaluation 
+                                <a target="_blank" href="https://arxiv.org/abs/2308.10828">Loghub 2.0: A Large-scale Evaluation 
                                     for Log Parsing Techniques: How Far are We?</a>, <em>in Proc. of the ACM SIGSOFT 
                                         International Symposium on Software Testing and Analysis (ISSTA)</em>,
+                                    2024.</p>
+                        </li>
+                        <li>
+                            <p>[<strong>FSE'24</strong>] Zhihan Jiang, Jinyang Liu, Zhuangbin Chen, Yichen Li, Junjie Huang, Yintong Huo, Pinjia He, Jiazhen Gu and Michael R. Lyu.
+                                <a target="_blank" href="https://arxiv.org/pdf/2310.01796">LILAC: Log Parsing using LLMs with Adaptive Parsing Cache</a>, <em>in Proc. of The ACM International Conference on the Foundations of Software Engineering (FSE)</em>,
                                     2024.</p>
                         </li>
                         <li>
