--- a/index.html
+++ b/index.html
@@ -504,14 +504,14 @@
                     <!-- <div class="col-lg-11 col-lg-offset-1"> -->
                     <div class="col-sm-2  col-sm-offset-2">
                         <div class="team-member">
-                            <img src="img/team/jmzhu.jpg" class="img-responsive img-circle" alt="">
+                            <img src="https://jiemingzhu.github.io/img/jmzhu.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://jiemingzhu.github.io">Jieming Zhu</a>
                             <p class="text-muted">Researcher, Huawei Noah's Ark Lab<br>Ph.D., CUHK</p>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="img/team/pjhe.jpg" class="img-responsive img-circle" alt="">
+                            <img src="https://pinjiahe.github.io/images/profile.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://pinjiahe.github.io">Pinjia He</a>
                             <p class="text-muted">Assistant Professor, CUHKSZ <br>Ph.D., CUHK</p>
                         </div>
@@ -525,7 +525,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="img/team/jyliu.jpg" class="img-responsive img-circle" alt="">
+                            <img src="https://jinyang88.github.io/images/android-chrome-512x512.png" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://jinyang88.github.io/">Jinyang Liu</a>
                             <p class="text-muted">Researcher, TikTok <br> Ph.D., CUHK</p>
                         </div>
@@ -542,7 +542,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="img/team/ythuo.jpg" class="img-responsive img-circle" alt="">
+                            <img src="https://yintonghuo.github.io/images/academic_photo.jpg" class="img-responsive img-circle" alt="">
                             <a target="_blank" href="https://yintonghuo.github.io">Yintong Huo</a>
                             <p class="text-muted">Assistant Professor, Singapore Management University <br>Ph.D., CUHK</p>
                         </div>
