--- a/index.html
+++ b/index.html
@@ -351,8 +351,7 @@
                         <li>
                             <p>[<strong>ISSTA'24</strong>] Zhihan Jiang, Jinyang Liu, Junjie Huang, Yichen Li, Yintong Huo, 
                                 Jiazhen Gu, Zhuangbin Chen, Jieming Zhu, Michael R. Lyu. 
-                                <a target="_blank" href="https://arxiv.org/abs/2308.10828">Loghub 2.0: A Large-scale Evaluation 
-                                    for Log Parsing Techniques: How Far are We?</a>, <em>in Proc. of the ACM SIGSOFT 
+                                <a target="_blank" href="https://arxiv.org/abs/2308.10828">A Large-Scale Evaluation for Log Parsing Techniques: How Far Are We?</a>, <em>in Proc. of the ACM SIGSOFT 
                                         International Symposium on Software Testing and Analysis (ISSTA)</em>,
                                     2024.</p>
                         </li>
@@ -377,8 +376,7 @@
                         <li>
                             <p>[<strong>ASE'19</strong>] Jinyang Liu, Jieming Zhu, Shilin He, Pinjia He, Zibin Zheng,
                                 Michael R. Lyu. <a target="_blank"
-                                    href="https://jiemingzhu.github.io/pub/jyliu_ase2019.pdf">Logzip: Extracting Hidden
-                                    Structures via Iterative Clustering for Log Compression</a>, <em>in Proc. of
+                                    href="https://arxiv.org/abs/1910.00409">Logzip: Extracting Hidden Structures via Iterative Clustering for Log Compression</a>, <em>in Proc. of
                                     IEEE/ACM International Conference on Automated Software Engineering (ASE)</em>,
                                 2019.</p>
                         </li>
@@ -399,7 +397,7 @@
                         </li>
                         <li>
                             <p>[<strong>ASE'18</strong>] Pinjia He, Zhuangbin Chen, Shilin He, Michael R. Lyu. <a
-                                    target="_blank" href="https://pinjiahe.github.io/papers/ASE18.pdf">Characterizing
+                                    target="_blank" href="https://dl.acm.org/doi/10.1145/3238147.3238193">Characterizing
                                     the Natural Language Descriptions in Software Logging Statements</a>, <em> in Proc.
                                     of the 33rd ACM/IEEE International Conference on Automated Software Engineering
                                     (ASE)</em>, 2018.</p>
@@ -412,13 +410,13 @@
                         </li>
                         <li>
                             <p>[<strong>ICWS'17</strong>] Pinjia He, Jieming Zhu, Zibin Zheng, and Michael R. Lyu. <a
-                                    target="_blank" href="http://jmzhu.logpai.com/pub/pjhe_icws2017.pdf">Drain: An
+                                    target="_blank" href="https://ieeexplore.ieee.org/document/8029742">Drain: An
                                     Online Log Parsing Approach with Fixed Depth Tree</a>, <em>in Proc. of the 24th
                                     International Conference on Web Services (ICWS)</em>, 2017.</p>
                         </li>
                         <li>
                             <p>[<strong>DSN'16</strong>] Pinjia He, Jieming Zhu, Shilin He, Jian Li, Michael R. Lyu. <a
-                                    target="_blank" href="https://jiemingzhu.github.io/pub/pjhe_dsn2016.pdf">An
+                                    target="_blank" href="https://ieeexplore.ieee.org/document/7579781">An
                                     Evaluation Study on Log Parsing and Its Use in Log Mining</a>, <em>in Proc. of
                                     IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</em>,
                                 2016.</p>
@@ -426,21 +424,21 @@
                         <li>
                             <p>[<strong>ISSRE'16</strong>] Shilin He, Jieming Zhu, Pinjia He, Michael R. Lyu. <a
                                     target="_blank"
-                                    href="https://jiemingzhu.github.io/pub/slhe_issre2016.pdf">Experience Report: System
+                                    href="https://ieeexplore.ieee.org/document/7774521">Experience Report: System
                                     Log Analysis for Anomaly Detection</a>, <em>in Proc. of IEEE International Symposium
                                     on Software Reliability Engineering (ISSRE)</em>, 2016.</p>
                         </li>
                         <li>
                             <p>[<strong>ICSE'15</strong>] Jieming Zhu, Pinjia He, Qiang Fu, Hongyu Zhang, Michael R.
                                 Lyu, Dongmei Zhang. <a target="_blank"
-                                    href="http://jiemingzhu.github.io/pub/jmzhu_icse2015.pdf">Learning to Log: Helping
+                                    href="https://ieeexplore.ieee.org/document/7194593">Learning to Log: Helping
                                     Developers Make Informed Logging Decisions</a>, <em>in Proc. of International
                                     Conference on Software Engineering (ICSE)</em>, 2015.</p>
                         </li>
                         <li>
                             [<strong>ICSE'14</strong>] Qiang Fu, Jieming Zhu, Wenlu Hu, Jian-Guang Lou, Rui Ding,
                             Qingwei Lin, Dongmei Zhang, and Tao Xie. <a target="_blank"
-                                href="https://jiemingzhu.github.io/pub/qfu_icse2014.pdf">Where Do Developers Log? An
+                                href="https://dl.acm.org/doi/10.1145/2591062.2591175">Where Do Developers Log? An
                                 Empirical Study on Logging Practices in Industry</a>, <em>in Proc. of International
                                 Conference on Software Engineering (ICSE)</em>, 2014.
                         </li>
